--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <title>Document</title>
   </head>
   <body>
+    <ul id="catigories"></ul>
+
     <ul id="ingredients"></ul>
 
-    <script src="./task-1.js" type="module"></script>
-    <script src="./task-2.js" type="module"></script>
-    <script src="./task-3.js" type="module"></script>
+    <script src="./js/task-1.js" type="module"></script>
+    <script src="./js/task-2.js" type="module"></script>
+    <script src="./js/task-3.js" type="module"></script>
   </body>
 </html>
