--- a/index.html
+++ b/index.html
@@ -44,9 +44,13 @@
     <ul id="gallery"></ul>
 
     <div id="counter">
-      <button type="button" data-action="decrement">-1</button>
+      <button type="button" data-action="decrement" class="js-decrement-btn">
+        -1
+      </button>
       <span id="value">0</span>
-      <button type="button" data-action="increment">+1</button>
+      <button type="button" data-action="increment" class="js-increment-btn">
+        +1
+      </button>
     </div>
 
     <input type="text" placeholder="Ваше имя?" id="name-input" />
