--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
       placeholder="Введи 6 символов"
     />
 
+    <input id="font-size-control" type="range" />
+    <br />
+    <span id="text">Абракадабра!</span>
+
     <script src="./js/task-1.js" type="module"></script>
     <script src="./js/task-2.js" type="module"></script>
     <script src="./js/task-3.js" type="module"></script>
